--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
+    "lucide-react": "^0.566.0",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
